# pydantic_dynamic_model

./: .gitignore  LICENSE  pyproject.toml
src/pydantic_dynamic_model/: __init__.py  core.py  definitions.py  utils.py
test/: test_schema.json
tests/: test_case.json  test_example.py
