[project]
name = "pydantic-dynamic-model"
version = "0.1.0"
description = "A library for defining and generating model with object"
authors = [{ name = "Qmi", email = "minh.pham1126@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "ruff>=0.8.0",
]
