[project]
name = "pydantic-dynamic-model"
version = "0.1.0"
description = "A library for defining and generating model with object"
authors = [{ name = "Qmi", email = "minh.pham1126@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9.1,<2.10.0"]
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
include = ["src/*", "test/*"]

[tool.uv]
dev-dependencies = ["isort>=5.13.2", "pytest>=8.3.3", "ruff>=0.8.0"]
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux'",
  "implementation_name == 'cpython' and sys_platform != 'linux'",
]

[tool.pytest.ini-option]
testpaths = ["test"]
